# cppcourse-brunel

./: Brunel - 5000 steps of time.ipynb  Brunel 10000 steps of time (each corresponding to 0.1ms) -> 1 sec.ipynb  CMakeLists.txt  Excitatory.cpp  Excitatory.hpp  Experiment.cpp  Experiment.hpp  Inhibitory.cpp  Inhibitory.hpp  Network.cpp  Network.hpp  Neuron.cpp  Neuron.hpp  README.md  Unittest.cpp  Untitled6.ipynb  main.cpp
Old files not used anymore/: Excitatory.cpp  Excitatory.hpp  Inhibitory.cpp  Inhibitory.hpp
doxygen/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
doxygen/addon/: Makefile  cmake_install.cmake
doxygen/generated_src/: code.cpp  commentcnv.cpp  commentscan.cpp  configimpl.cpp  constexp.cpp  declinfo.cpp  defargs.cpp  fortrancode.cpp  fortranscanner.cpp  pre.cpp  pycode.cpp  pyscanner.cpp  scanner.cpp  sqlcode.cpp  tclscanner.cpp  vhdlcode.cpp  xmlcode.cpp
doxygen/html/: _excitatory_8hpp_source.html  _inhibitory_8hpp_source.html  _network_8hpp_source.html  _neuron_8hpp_source.html  annotated.html  class_excitatory-members.html  class_excitatory.html  class_inhibitory-members.html  class_inhibitory.html  class_network-members.html  class_network.html  class_neuron-members.html  class_neuron.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  md__r_e_a_d_m_e.html  pages.html
doxygen/latex/: annotated.tex  class_excitatory.tex  class_inhibitory.tex  (+5 more)
googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+31 files in other folders)
